wp-content/themes/ideum/stylesheets/components/_content.scss
#content {  
  border-radius: $base-border-radius;
  overflow: hidden;
  position: relative; // force a new z-index stacking context
  z-index: 100;

  a {
    word-wrap: break-word;
    word-break: break-word;
  }

  .sub-page-wrap { // removes content area padding so sub-nav flush top
    /*@include media($medium-screen-up) {
      margin-top: rem(-30);
    }*/
  }
  
  /*@include media($medium-screen-up) {
    padding: rem(30) 0 0 0;
  }*/

  .chat { 
    @include banner('patterns/hex.svg');
    clear: both;
    height: auto;
    padding: $gutter inherit;
    
    @include media($medium-screen-up) {
      max-height: $footer-overlap-height;
      padding: $gutter;
    }    

  }

  
  .select2-container {        
    background: #424c5a;
    height: 60px;
    margin: 10px 2%;
    max-width: 80%;
    min-width: 40%;

    @include media($small-screen-up) {
      clear: both;
      width: 80%;

      &:last-of-type {
        margin-bottom: $medium-gutter;
      }

    }

    @include media($medium-screen-up) {
      clear: none;
      float: left;
      width: 46%;
    }

    @include media($large-screen-up) {
      min-width: 240px;
    }


    a.select2-choice {
      background: #424c5a;
      border: none;
      height: 60px;
      padding: 18px;
      text-align: left;

      .select2-chosen {
        color: #fff;
        font-size: 1.2em;
        font-weight: bold;
        text-transform: uppercase;
      }

      .select2-arrow  {
        background: none;
        border: none;
        width: 60px;

        b {
          background: none;
          padding: 14px;
          text-align: center;

          &:after {
            content: '\002b'; // replace with a new bg img
            color: $white;

            font-weight: $bold;
            font-size: 2.5em;
          }

        }

      }

    }

  }

  .section-info {
    clear: both;
    margin:0 auto;
    padding-bottom: 30px;
    text-align: center;
    width: 80%;

    @include media($medium-screen-up) {
      width: 75%;
    }

    .follow-button-wrap {
      position: relative;
      a.button.phone-only {
        @include media($small-screen-up) {
          position: absolute;
          top: -0px;
          left: -0px;
          right: -0px;
          margin: 0 auto;
        }
      }
    }

    h1 a {
      color: $very-dark-gray;

      &:hover {
        color: lighten($very-dark-gray, 15)
      }

    }

  }

  .social-media-feed {
    /* no op */

    .slider {
      padding-bottom: $medium-gutter;
    }

  }

  .featured-video {
    /* no op */

    &.gold {
      background-color: $medium-dark-orange;
    }

    &.red {
      background-color: $very-dark-red;
    }

    &.blue {
      background-color: $ideum-blue;
    }
    
    @include media($small-screen-up) {
      
      .txt-wrap {
        color: $white;
        padding: $gutter 0;

        h1 a, a.view, a.share, a.read {
          font-weight: $bold;
          color: $white;

          &:hover {
            color: darken($white, 15);
          }

        }
      }

    }

    @include media($medium-screen-up) {

      &.img-left { /* no op */ }

      &.img-right {
        .img-wrap{ @include shift(6); }
        .txt-wrap{ @include shift(-11); }
      }

      .txt-wrap {
        color: $white;
        padding: $gutter 0;

        h1 a, a.view, a.share, a.read {
          font-weight: $bold;
          color: $white;

          &:hover {
            color: darken($white, 15);
          }

        }
      }

      .img-wrap {
        position: relative;
        
        a {
          float: left;
          position: relative;
            left: 50%;

          img {
            display: block;
            float: left;
            max-width: initial;
            position: relative;
              right: 50%;
          }
        }
      }

    }
  }

  #contact {

    .highlight-text { /* also see _highlight-text.scss in mixins */
      @include highlight-text($vv-dark-gray, $white, $white, $white);
      position: relative;
    }

  }

  #our-story {

    .highlight-text { /* also see _highlight-text.scss in mixins */
      @include highlight-text($dark-teal, $white, $white, $white);
      position: relative;
    }

    a {
      /* no op */

      &.edit-link {
        color: $vv-dark-gray;
        font-size: .75em;
        border-bottom:1px dotted $vv-dark-gray;
        position: absolute;
          top:10px;

        &:hover {
          color: $white;
          border-bottom: none;
        }
      }

    }

  }

  .highlight-text.child-page { /* also see _highlight-text.scss in mixins */
    border-top: 1px solid $vv-light-gray;
    @include highlight-text($white, $vv-dark-gray, $vv-dark-gray, $light-medium-gray);
    font-size: 1em;
    padding:40px 0;
    position: relative;

    a {
      /* no op */

      &.edit-link {
        color: $vv-dark-gray;
        font-size: .75em;
        border-bottom:1px dotted $vv-dark-gray;
        position: absolute;
          top:10px;

        &:hover {
          color: $medium-gray;
          border-bottom: none;
        }

      }

    }

  }

  .one-column-text.slider, .slider-two-column-text.slider {
    background-colr: $very-light-gray;
    margin: -0px auto 0;
    max-width: 80%;
    padding: 5% 0;
    
    /*@include media($medium-screen-up) {
      margin: -50px auto 0;
    }*/

    h2 {
      text-align:center;
    }
  }

  .project-slider {
    background-color: $vv-light-gray;

    .rn-carousel-indicator span {
      position: relative;
        top: -90px;
    }

    .project.item {
      /* no op */

      article {
        position: relative;

        .slide-text-wrap {
          height: 100%;
          position: absolute;
            left: 50%; top: -50%;
          width: 100%;

          .slide-text-content {
            height: 100%;
            position: absolute;
              bottom: -73%; right: 50%;
            text-align: center;
            width: 100%;

            @include media($medium-screen-up) {
              bottom: -83%;
            }

            h1 { 
              color: #fff;
              font-size: 3.5vw;
            }   

            p {
              color: #fff; 
              font-size: 2.5vw; 
              line-height: 3.5vw; 
              margin: 0 auto;
              max-width: 40%;
            }

            &.Left {
              h1, p {
                margin-left: 7.5%;
                text-align: left;
              }
            }

            &.Right {
              h1, p {
                margin-right: 7.5%;
                text-align: right;
              }
            }

          }

        }

        img {
          width: 100%;
        }

      }

      .one-column-text, .two-column-text {
        padding: 5% 0;

        h2 {
          text-align:center;
        }
      }

    }

  }

  .facilities {

    &.item {
      /* no op */

      article {
        /* no op */

        img {
          width: 100%;
        }

      }
      
    }

    &.rn-carousel-slide {
      height: initial;
    }

    .one-column-text {
      @include span-columns(10);
      @include shift(1);

      padding:0 0 $gutter;
      text-align: justify;
    }

    .two-column-text {
      @include span-columns(10);
      @include shift(1);

      @include media($medium-screen-up) {
        @include column-count(2);
        @include column-gap(40px); // this should be 1 coulmn gutter, but how?
      }

      padding:0 0 $gutter;
      text-align: justify;
    }

  }

}

.edit-link {
  position: absolute;
    right: 30px;
}



#services, #touch-tables, #touch-walls, #client-list, #team, #our-story, #facilities, #mission, #contact, #default-template {
  /* no op */

  .button.dark {      
    background-color: $vv-dark-gray;
    border-color: $vv-dark-gray;
    font-size: 1.75em;
    font-weight: 400;

    &:hover {
      background-color: lighten($base-button-color, 15);
      border-color: $hover-button-color;
      color: $base-background-color;
    }
  }

  .button {      
    background-color: $dark-teal;
    border-color: $dark-teal;
    font-size: 1.75em;
    font-weight: 400;

    @include media($medium-screen-up) {
      font-size: 2.45em;
    }

    &:hover {
      color: $very-dark-gray;
    }
  }
}

.single-ideum_project {
  /* no op */
  #content {
    padding-top:0;

    .project-slider {
      background-color: $off-vv-light-gray;

      &.no-slide {
        /*background-color: $white;*/
      }

      img.primary-image {
        width:100%;
      }

      .video-wrapper { position: relative; padding-bottom: 56.25%; /* 16:9 */ height: 0;}
      .video-wrapper object, .video-wrapper embed, .video-wrapper iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%;}

      iframe {
        width: 100%;
        height: 100%;
      }

    }

    .secondary-images {
      @include span-columns(12);
      @include omega;
      @include clearfix;
      margin:$medium-gutter 0;

      h2 {
        margin-bottom: $small-gutter;
      }

      

      li {
        background-color: $off-vv-light-gray;
        border:1px solid $vv-light-gray;
        float:left;
        margin: 0 1% 10px; 
        min-height: 90px;
        max-height: 90px;
        overflow: hidden;

        width: 31%;
        
        object-fit: contain;

        &:first-of-type {
          margin-left: 0;
        }
        &:last-of-type {
          margin-right: 0;
        }

        @include media($medium-screen-up) {
          max-height: 160px;
          min-height: 160px;
        }

        a {
          @include clearfix;
        }

        img {
          margin: 0;          
          padding: 5%;
          max-height: 98%;
          min-height: 98%;
          width:100%;
          object-fit: fill;

          @include media($medium-screen-up) {
            max-height: 160px;
            min-height: 160px;
          }
        }

      }

    }

  }

}

.teamgrid {
  padding: 0 0 $gutter; 
}

.accordion-wrap {
  padding: 0 0 $gutter; 
}

#follow-dialog, .share-dialog {
  padding:20px;
  text-align:center;
}

#directions-dialog {
  padding:20px;
  text-align:center;
}

.layout-sidebar.member-details .img-circular {
  margin: 0 0 20px 0;
}

.follow-share, .social-share, #directions-dialog {
  /* no op */
  #ideum-icon {
    margin-bottom: 16px;
  }
  
  p {
    margin-bottom: 24px;
  }

  .sharing-icon {
    margin:0 17px;
    width: 44px;

    &:hover {
      opacity:0.7;
    }

  }

  input {
    margin:0 auto $gutter;
    max-width: 300px;
  }

}

.two-column-text {
  @include span-columns(10);
  @include shift(1);

  @include media($medium-screen-up) {
    @include column-count(2);
    @include column-gap(40px); // this should be 1 column gutter, but how?
  }

  padding:0 0 $gutter;
  text-align: justify;

  &.no-justification {
    text-align: left;
  }

}

.error-page {
  border:2px solid $very-dark-red;
  margin-top:-30px;
  position:relative;
  
  h1, h2, h3, h4, p { 
    margin-bottom:20px;
  }

  h1 { 
    color: $very-dark-red; 
  }

  ul {
    li {
      margin-bottom:12px;
    }
  }

}

.faux-link {
  color: $base-link-color;
  text-decoration: none;
}

.hidden {visibility: hidden;}

.download-open-exhibits {
  @include media($small-screen-up) {
    display: none !Important;
  }
  @include media($large-screen-up) {
    display: inline-block !Important;
  }
}

